login yet to be functional

--- a/src/app/components/subjects/subjects.component.html
+++ b/src/app/components/subjects/subjects.component.html
@@ -1,3 +1,13 @@
-<p>
-  subjects!
-</p>
+<div class="login-html">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active">Subjects</li>
+      </ol>
+  <h1> Enrolled Subjects </h1>
+    <div class="list-group">
+       
+        <a [routerLink]="['/classes']" class="list-group-item list-group-item-action">0001 Software Engineering Practice</a>
+        <a [routerLink]="['/classes']" class="list-group-item list-group-item-action">0002 Programming Fundamentals</a>
+        <a [routerLink]="['/classes']" class="list-group-item list-group-item-action">0003 Software Development Practice</a>
+        
+      </div>
+</div>
