--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,39 +1,38 @@
 <div class="container">
-  <form>
-    <div>
-       <h1> Log In </h1>
+  <div class="login-html">
+    <h1> Log In </h1>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div class="username">
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Student/Staff ID</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail3" formControlName="username" placeholder="ID">
     </div>
-    <div class="form-group row">
-      <label for="inputID" class="col-sm-2 col-form-label">Student/Staff ID</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputID" placeholder="ID">
+  </div>
+  <div class="pass">
+    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+    <div class="col-sm-10">
+      <input type="password" class="form-control" id="inputPassword3" formControlName="password" placeholder="Password">
+    </div>
+  </div>
+  
+  <div class="remember">
+    <label class="col-sm-2"></label>
+    <div class="col-sm-10">
+      <div class="form-check">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox"> Remember Me
+        </label>
       </div>
     </div>
-    <div class="form-group row">
-      <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-      </div>
-    </div>
-    
-    <div class="form-group row">
-      <label class="col-sm-2"></label>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <label class="form-check-label">
-            <input class="form-check-input" type="checkbox"> Remember Me
-          </label>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="form-group">
-              <form action="/subjects">
-                <input type="submit" value="Login"/>
-              </form>
-            </div>
+  </div>
+  <div class="row">
+    <div class="col">
+        <div class="button">
+          <input type="submit" class="button" [disabled]="!loginForm.valid" value="Login"/>
         </div>
     </div>
-  </form>
+   
+    </div>    
+</form>
+</div>
 </div>
