--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,8 @@
   <div class="row">
     <div class="col">
         <div class="button">
-          <input type="submit" class="button" [disabled]="!loginForm.valid" value="Login"/>
+          <input type="submit" class="button" ng-disabled="!loginForm.valid" value="Login"/>
+          
         </div>
     </div>
    
