mark attendance page

--- a/src/app/components/classes/classes.component.html
+++ b/src/app/components/classes/classes.component.html
@@ -6,9 +6,9 @@
 <h1> 0000 Subject Name </h1>
     <div class="list-group">
        
-        <a href="#" class="list-group-item list-group-item-action">Lecture 02 </a>
-        <a href="#" class="list-group-item list-group-item-action">Tutorial 01</a>
-        <a href="#" class="list-group-item list-group-item-action">Workshop 03</a>
+        <a [routerLink]="['/attend']" class="list-group-item list-group-item-action">Lecture 02 </a>
+        <a [routerLink]="['/attend']" class="list-group-item list-group-item-action">Tutorial 01</a>
+        <a [routerLink]="['/attend']"class="list-group-item list-group-item-action">Workshop 03</a>
         
       </div>
 </div>
